[package]
name = "pegview"
version = "0.3.9"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
repository = "https://github.com/A4-Tacks/pegview"
description = "Tree visualization of rust-peg trace"

[dependencies]
atty = "0.2.14"
getopts = "0.2.21"
getopts-macro = "0.1.2"
itermaps = "0.3.3"
line-column = "0.1.2"
peg = "0.8.5"
unicode-width = "0.2.0"
